Product listing links update; Animations updates;

--- a/product-category.html
+++ b/product-category.html
@@ -217,7 +217,7 @@
                 <div class="sale-item">-33%</div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
@@ -225,7 +225,7 @@
                   </a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Canon Camera
                     </a>
                   </h6>
@@ -264,12 +264,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">hiTech</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Jat Pack
                     </a>
                   </h6>
@@ -309,12 +309,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">Different Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Ibanez RG350 Guitar
                     </a>
                   </h6>
@@ -355,7 +355,7 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
@@ -363,7 +363,7 @@
                   </a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Net
                     </a>
                   </h6>
@@ -401,12 +401,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">Home Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Canon Camera
                     </a>
                   </h6>
@@ -444,12 +444,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">Kids Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Toy
                     </a>
                   </h6>
@@ -488,7 +488,7 @@
                 <div class="sale-item">-42%</div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
@@ -496,7 +496,7 @@
                   </a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Gilette Blade
                     </a>
                   </h6>
@@ -535,12 +535,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">Home Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Canon Camera
                     </a>
                   </h6>
@@ -578,12 +578,12 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">hiTech</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Jat Pack
                     </a>
                   </h6>
@@ -624,12 +624,12 @@
                 <div class="sale-item">-21%</div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">Different Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Ibanez RG350 Guitar
                     </a>
                   </h6>
@@ -671,7 +671,7 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
@@ -679,7 +679,7 @@
                   </a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Canon Camera
                     </a>
                   </h6>
@@ -717,7 +717,7 @@
                 </div>
                 <div class="item-info">
                   <figure class="product-picture">
-                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                    <a href="product-details.html" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
                   </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
@@ -725,7 +725,7 @@
                   </a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
-                    <a href="#" title="Just Product">
+                    <a href="product-details.html" title="Just Product">
                       Knife
                     </a>
                   </h6>
