"Product Details" page responsive styles implementation

--- a/product-details.html
+++ b/product-details.html
@@ -85,7 +85,7 @@
     <div class="content-wrapper">
       <div class="details-content">
         <div class="main-content">
-          <div class="holder">
+          <div class="holder breadcrumbs-holder">
             <div class="last-updated">Last price update was: May 3, 2020 5:56 pm <i class="fa fa-question-circle-o"></i></div>
             <nav class="breadcrumbs">
               <a href="/">Home</a>
