Add right side bar on Product Details page + responsive styles; Add Product Details - 2 page with styles.

--- a/product-category.html
+++ b/product-category.html
@@ -46,7 +46,7 @@
                 <li><a href="affiliate-search.html">Affiliate search</a></li>
                 <li><a href="#">Product Category</a></li>
                 <li><a href="product-details.html">Product Details</a></li>
-                <li><a href="#">Versus Page</a></li>
+                <li><a href="product-details-2.html">Product Details - 2</a></li>
                 <li><a href="#">Versus Page 2</a></li>
                 <li><a href="#">Top review List</a></li>
                 <li><a href="#">Price Range Page</a></li>
