Product Listing list style + responsive styles

--- a/product-details.html
+++ b/product-details.html
@@ -46,7 +46,7 @@
                 <li><a href="product-category.html">Product Category</a></li>
                 <li><a href="#">Product Details</a></li>
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
-                <li><a href="#">Versus Page 2</a></li>
+                <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="#">Top review List</a></li>
                 <li><a href="#">Price Range Page</a></li>
               </ul>
