--- a/product-details-2.html
+++ b/product-details-2.html
@@ -49,7 +49,7 @@
                 <li><a href="product-details.html">Product Details</a></li>
                 <li><a href="#">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
-                <li><a href="#">Top review List</a></li>
+                <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="#">Price Range Page</a></li>
               </ul>
             </li>
