Finish styles for the "Versus" page

--- a/top-multi.html
+++ b/top-multi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Compare App</title>
+  <title>Top products</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
   <link href="./css/styles.css" type="text/css" rel="stylesheet">
@@ -49,7 +49,7 @@
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="#">Top Multi</a></li>
-                <li><a href="#">Price Range Page</a></li>
+                <li><a href="versus-1.html">Versus 1</a></li>
               </ul>
             </li>
             <li>
@@ -689,7 +689,6 @@
       </div>
     </div>
   </section>
-  
   <section class="top-text">
     <div class="content-wrapper">
       <h2>
