--- a/product-category.html
+++ b/product-category.html
@@ -49,7 +49,7 @@
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
-                <li><a href="#">Price Range Page</a></li>
+                <li><a href="versus-1.html">Versus 1</a></li>
               </ul>
             </li>
             <li>
