--- a/product-details-2.html
+++ b/product-details-2.html
@@ -50,7 +50,7 @@
                 <li><a href="#">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
-                <li><a href="#">Price Range Page</a></li>
+                <li><a href="versus-1.html">Versus 1</a></li>
               </ul>
             </li>
             <li>
