--- a/product-details-2.html
+++ b/product-details-2.html
@@ -51,6 +51,7 @@
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="versus-1.html">Versus 1</a></li>
+                <li><a href="versus-2.html">Versus 2</a></li>
               </ul>
             </li>
             <li>
@@ -500,29 +501,29 @@
               </div>
               <div class="suggestion-stores">
                 <a href="https://www.amazon.com" target="_blank">
-                <span class="store-picture">
-                  <img src="./assets/images/amazon-buy.gif" alt="Amazon">
-                </span>
-                  <span class="store-suggestion">
-                  <span class="suggestion-price">
-                    <span class="store-price">$286.44</span>
-                    <span class="store-name">Amazon.com</span>
+                  <span class="store-picture">
+                    <img src="./assets/images/amazon-buy.gif" alt="Amazon">
                   </span>
-                  <i class="fa fa-chevron-circle-right"></i>
-                </span>
+                  <span class="store-suggestion">
+                    <span class="suggestion-price">
+                      <span class="store-price">$286.44</span>
+                      <span class="store-name">Amazon.com</span>
+                    </span>
+                    <i class="fa fa-chevron-circle-right"></i>
+                  </span>
                 </a>
                 <a href="https://www.walmart.com" target="_blank">
-                <span class="store-picture">
-                  <img src="./assets/images/walmart-buy.png" width="49px" height="49px" alt="Walmart">
-                </span>
-                  <span class="store-suggestion">
-                  <span class="suggestion-price">
-                    <span class="store-price">$332.99</span>
-                    <span class="store-name">walmart.com</span>
-                    <span class="stock-out">Out of stock</span>
+                  <span class="store-picture">
+                    <img src="./assets/images/walmart-buy.png" width="49px" height="49px" alt="Walmart">
                   </span>
-                  <i class="fa fa-chevron-circle-right"></i>
-                </span>
+                  <span class="store-suggestion">
+                    <span class="suggestion-price">
+                      <span class="store-price">$332.99</span>
+                      <span class="store-name">walmart.com</span>
+                      <span class="stock-out">Out of stock</span>
+                    </span>
+                    <i class="fa fa-chevron-circle-right"></i>
+                  </span>
                 </a>
               </div>
             </div>
