--- a/versus-1.html
+++ b/versus-1.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
   <link href="./css/styles.css" type="text/css" rel="stylesheet">
-  <link href="./css/product-list-item.css" type="text/css" rel="stylesheet">
   <link href="./css/versus-1.css" type="text/css" rel="stylesheet">
   <link href="./css/responsive-styles.css" type="text/css" rel="stylesheet">
 </head>
@@ -50,6 +49,7 @@
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="#">Versus 1</a></li>
+                <li><a href="versus-2.html">Versus 2</a></li>
               </ul>
             </li>
             <li>
