--- a/product-details.html
+++ b/product-details.html
@@ -49,6 +49,7 @@
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="versus-1.html">Versus 1</a></li>
+                <li><a href="versus-2.html">Versus 2</a></li>
               </ul>
             </li>
             <li>
