--- a/product-details-2.html
+++ b/product-details-2.html
@@ -55,7 +55,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">💗 My wishlist</a>
+              <a href="wishlist.html">💗 My wishlist</a>
             </li>
           </ul>
         </nav>
