--- a/top-multi.html
+++ b/top-multi.html
@@ -54,7 +54,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">💗 My wishlist</a>
+              <a href="wishlist.html">💗 My wishlist</a>
             </li>
           </ul>
         </nav>
