--- a/versus-1.html
+++ b/versus-1.html
@@ -53,7 +53,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">💗 My wishlist</a>
+              <a href="wishlist.html">💗 My wishlist</a>
             </li>
           </ul>
         </nav>
