Shop page design implementation

--- a/product-details-2.html
+++ b/product-details-2.html
@@ -27,7 +27,7 @@
         <nav class="header-navigation">
           <ul class="nav-container">
             <li>
-              <a href="#">Shop</a>
+              <a href="shop.html">Shop</a>
             </li>
             <li>
               <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
