--- a/wishlist.html
+++ b/wishlist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Product Details</title>
+  <title>My Wishlist</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
   <link href="./css/styles.css" type="text/css" rel="stylesheet">
@@ -27,7 +27,7 @@
         <nav class="header-navigation">
           <ul class="nav-container">
             <li>
-              <a href="#">Shop</a>
+              <a href="shop.html">Shop</a>
             </li>
             <li>
               <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
