Shop responsive styles implementation

--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
   <link href="./css/responsive-styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div class="page-container">
+<div class="page-container shop-page">
   <header>
     <div class="content-wrapper">
       <div class="header-container">
