Compare page design implementation

--- a/top-multi.html
+++ b/top-multi.html
@@ -151,7 +151,7 @@
               <h6 class="product-name">
                 <i class="fa fa-fire"></i>
                 <a href="#" title="Just Product">
-                  Jat Pack
+                  Jet Pack
                 </a>
               </h6>
               <div class="product-rate" title="Rated 5 out of 5">
