--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
                     <a href="#" title="Just Product">
-                      Jat Pack
+                      Jet Pack
                     </a>
                   </h6>
                   <div class="product-rate" title="Rated 5 out of 5">
@@ -714,7 +714,7 @@
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
                     <a href="#" title="Just Product">
-                      Jat Pack
+                      Jet Pack
                     </a>
                   </h6>
                   <div class="product-rate" title="Rated 5 out of 5">
