--- a/product-details-2.html
+++ b/product-details-2.html
@@ -617,7 +617,7 @@
                 <h6 class="product-name">
                   <i class="fa fa-fire"></i>
                   <a href="product-details.html" title="Just Product">
-                    Jat Pack
+                    Jet Pack
                   </a>
                 </h6>
                 <div class="product-rate" title="Rated 5 out of 5">
