--- a/shop.html
+++ b/shop.html
@@ -271,7 +271,7 @@
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
                     <a href="product-details.html" title="Just Product">
-                      Jat Pack
+                      Jet Pack
                     </a>
                   </h6>
                   <div class="product-rate" title="Rated 5 out of 5">
@@ -585,7 +585,7 @@
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
                     <a href="product-details.html" title="Just Product">
-                      Jat Pack
+                      Jet Pack
                     </a>
                   </h6>
                   <div class="product-rate" title="Rated 5 out of 5">
