UI adjustments by Philipp's comments.

--- a/product-details.html
+++ b/product-details.html
@@ -28,7 +28,7 @@
               <a href="shop.html">Shop</a>
             </li>
             <li>
-              <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-diamond"></i> Unique Functions<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="#">Compare few items function</a></li>
                 <li><a href="#">Super function</a></li>
@@ -40,20 +40,21 @@
               </ul>
             </li>
             <li>
-              <a href="#">💰 Best conversations pages<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-eye"></i> Best conversations pages<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="affiliate-search.html">Affiliate search</a></li>
                 <li><a href="product-category.html">Product Category</a></li>
-                <li><a href="#">Product Details</a></li>
+                <li><a href="product-details.html">Product Details</a></li>
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="versus-1.html">Versus 1</a></li>
                 <li><a href="versus-2.html">Versus 2</a></li>
+                <li><a href="products-compare.html">Compare Products</a></li>
               </ul>
             </li>
             <li>
-              <a href="wishlist.html">💗 My wishlist</a>
+              <a href="wishlist.html"><i class="fa fa-heart-o"></i> My wishlist</a>
             </li>
           </ul>
         </nav>
@@ -232,7 +233,7 @@
               <i class="fa fa-bars"></i>
               Awesome Product Prices
               <label class="details-toggle" for="stores-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
@@ -288,7 +289,7 @@
               <i class="fa fa-bars"></i>
               Description
               <label class="details-toggle" for="descriptions-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
@@ -393,7 +394,7 @@
               <i class="fa fa-sliders"></i>
               Additional Information
               <label class="details-toggle" for="additional-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
@@ -430,7 +431,7 @@
               <i class="fa fa-video-camera"></i>
               Awesome Product Videos
               <label class="details-toggle" for="videos-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
@@ -440,15 +441,15 @@
           <div class="details-block" id="reviews-info">
             <input type="checkbox" class="hide-details" id="reviews-toggle" hidden>
             <h4>
-              <i class="fa fa-star"></i>
+              <i class="fa fa-star-o"></i>
               Reviews (0)
               <label class="details-toggle" for="reviews-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
               <h2 class="reviews-title">
-                <i class="fa fa-star"></i> User Reviews
+                <i class="fa fa-star-o"></i> User Reviews
               </h2>
               <div class="user-reviews-container">
                 <div class="total-rate">
@@ -573,7 +574,7 @@
               <i class="fa fa-bars"></i>
               Related Products
               <label class="details-toggle" for="related-products-toggle">
-                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-angle-down"></i>
               </label>
             </h4>
             <div class="details-toggle-content">
