--- a/shop.html
+++ b/shop.html
@@ -27,10 +27,10 @@
         <nav class="header-navigation">
           <ul class="nav-container">
             <li>
-              <a href="#">Shop</a>
+              <a href="shop.html">Shop</a>
             </li>
             <li>
-              <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-diamond"></i> Unique Functions<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="#">Compare few items function</a></li>
                 <li><a href="#">Super function</a></li>
@@ -42,20 +42,21 @@
               </ul>
             </li>
             <li>
-              <a href="#">💰 Best conversations pages<i class="fa fa-chevron-down"></i></a>
+              <a href="#"><i class="fa fa-eye"></i> Best conversations pages<i class="fa fa-angle-down"></i></a>
               <ul class="sub-menu">
                 <li><a href="affiliate-search.html">Affiliate search</a></li>
-                <li><a href="#">Product Category</a></li>
+                <li><a href="product-category.html">Product Category</a></li>
                 <li><a href="product-details.html">Product Details</a></li>
                 <li><a href="product-details-2.html">Product Details - 2</a></li>
                 <li><a href="product-listing-list.html">Product Listing</a></li>
                 <li><a href="top-multi.html">Top Multi</a></li>
                 <li><a href="versus-1.html">Versus 1</a></li>
                 <li><a href="versus-2.html">Versus 2</a></li>
+                <li><a href="products-compare.html">Compare Products</a></li>
               </ul>
             </li>
             <li>
-              <a href="wishlist.html">💗 My wishlist</a>
+              <a href="wishlist.html"><i class="fa fa-heart-o"></i> My wishlist</a>
             </li>
           </ul>
         </nav>
